@startuml
skinparam classAttributeIconSize 0
skinparam ClassFontStyle bold
skinparam linetype polyline

/'title Yksityiskohtaisempi komponenttiarkkitehtuuri'/

package aastaar {
  class Main
  class Scenario

  package map {
    class MapCreator 
    class Grid
    class Node
  }

  package algorithms {
    class AStar
    class AlgorithmVisualization
    class UniformCostSearch
    interface PathfindingAlgorithm <<interface>>

    package path {
      class PathWithArray
      interface Path <<interface>>
    }
  }

  package utils {
    class PathfindingPerformanceTester
    class CustomFileReader
  }

  package datastructures {
    class CustomPriorityQueue
  }
}

Main --> Scenario
Main ..> AlgorithmVisualization
Main ..> AStar
Main ..> Grid
Main ..> Node
Main ..> UniformCostSearch
Main ..> PathfindingPerformanceTester

Scenario --> AlgorithmVisualization
Scenario --> Grid
Scenario ..> MapCreator
Scenario --> Node
Scenario ..> PathfindingAlgorithm

MapCreator --> CustomFileReader

PathfindingPerformanceTester --> Scenario
PathfindingPerformanceTester --> Node
PathfindingPerformanceTester ..> PathfindingAlgorithm
PathfindingPerformanceTester ..> AlgorithmVisualization

AlgorithmVisualization --> Node
AlgorithmVisualization -o PathfindingAlgorithm

PathfindingAlgorithm ..> Path
PathfindingAlgorithm ..> Node
PathfindingAlgorithm <|.. UniformCostSearch
PathfindingAlgorithm <|.. AStar

UniformCostSearch <|- AStar
UniformCostSearch ..> CustomPriorityQueue
UniformCostSearch ..> PathWithArray
UniformCostSearch ..> Node
UniformCostSearch ..> Grid

AStar ..> Grid
AStar ..> Node

Path <|. PathWithArray

PathWithArray ..> Node

CustomPriorityQueue --> Node

hide members
hide circles

@enduml